Added link to project statistics; doc/.header.md

--- a/doc/.header.md
+++ b/doc/.header.md
@@ -4,4 +4,5 @@
 * [Download](http://foicica.com/scintillua/download) |
 * [Lua API](http://foicica.com/scintillua/api) |
 * [Source](http://foicica.com/hg/scintillua) |
+* [Stats](http://foicica.com/scintillua/stats) |
 * [Mailing List](http://foicica.com/lists)
