Updated header links; doc/.header.md

--- a/doc/.header.md
+++ b/doc/.header.md
@@ -2,7 +2,8 @@
 
 * [Home](http://foicica.com/scintillua) |
 * [Download](http://foicica.com/scintillua/download) |
-* [Lua API](http://foicica.com/scintillua/api) |
+* [Manual](http://foicica.com/scintillua/manual.html) |
+* [API](http://foicica.com/scintillua/api.html) |
 * [Source](http://foicica.com/hg/scintillua) |
 * [Stats](http://foicica.com/stats.html#Scintillua) |
 * [Mailing List](http://foicica.com/lists)
