--- a/doc/.header.md
+++ b/doc/.header.md
@@ -1,9 +1,9 @@
 # ![](images/icon.png) Scintillua
 
-* [Home](http://foicica.com/scintillua) |
+* [Home](README.html) |
 * [Download](http://foicica.com/scintillua/download) |
-* [Manual](http://foicica.com/scintillua/manual.html) |
-* [API](http://foicica.com/scintillua/api.html) |
+* [Manual](manual.html) |
+* [API](api.html) |
 * [Source](http://foicica.com/hg/scintillua) |
 * [Stats](http://foicica.com/stats.html#Scintillua) |
 * [Mailing List](http://foicica.com/lists)
