--- a/doc/.footer.md
+++ b/doc/.footer.md
@@ -1,1 +1,3 @@
--> (c) 2006-2017 Mitchell mitchell.att.foicica.com <-
+-> (c) 2006-2017 [Mitchell][] mitchell.att.foicica.com <-
+
+[Mitchell]: http://foicica.com
